--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <link href="css/main.less" rel="stylesheet" type="text/less">
-    <link href="css/vendor/shCore.css" rel="stylesheet" type="text/less">
-    <link href="css/vendor/shThemeDefault.css" rel="stylesheet" type="text/less">
+    <link href="css/vendor/shCore.css" rel="stylesheet" type="text/css">
+    <link href="css/vendor/fireworks.css" rel="stylesheet" type="text/css">
+    <link href="css/vendor/shThemeDefault.css" rel="stylesheet" type="text/css">
 
     <title>Mois du JS</title>
     <link rel="icon" type="image/png" href="css/favicon.png">
@@ -104,6 +105,7 @@
 <script src="js/App.js"></script>
 <script src="js/tutorial/PonyUnit.js"></script>
 <script src="js/tutorial/tutorial.js"></script>
+<script src="js/vendor/fireworks.js"></script>
 
 </body>
 </html>
