--- a/tutorial.html
+++ b/tutorial.html
@@ -312,7 +312,7 @@ App = Ember.Application.create({
        Attention, un lien <code>linkTo</code> doit toujours prendre en paramètre le même type que le type renvoyé par la méthode <code>model</code> de la route vers laquelle on redirige.
        Ici, on passera donc le log, et pas l'identifiant du log.
        De plus Le helper linkTo est capable d'ajouter un comportement de clique sur toute la ligne du tableau, plutôt que mettre le helper sur une case du tableau, utiliser ça propriété tagName pour
-        préciser que linkTo devrat être rendu sous la forme d'une balise tr, et supprimer la balise tr existante.
+        préciser que linkTo devrat être rendu sous la forme d'une balise <code>tr</code>, et supprimer la balise <code>tr</code> existante.
     </p>
 </script>
 
